--- a/app/app.css
+++ b/app/app.css
@@ -1,15 +1,24 @@
-@import "tailwindcss";
-
-@theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+* {
+  box-sizing: border-box;
 }
 
-html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  padding: 0;
+  margin: 0;
+}
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+:root {
+  --background-color: #ffffff;
+  --foreground-color: #1b1b23;
+  --border-color: #c7c5d0;
+
+  --chart-1: #4142ef;
+  --chart-2: #ff8346;
+  --chart-3: #46464f;
+
+  .dark {
+    --background-color: #000027;
+    --foreground-color: #ffffff;
+    --border-color: #c7c5d0;
   }
 }
