--- a/app/_mixins.scss
+++ b/app/_mixins.scss
@@ -10,27 +10,16 @@
   border-radius: var(--primary-radius);
   background: var(--background-color);
   border: 1px solid var(--border-color);
-  box-shadow: 1px 2px 16px rgba(0, 0, 0, 0.15);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.10);
   position: absolute;
   z-index: 10;
-
-  animation: fade-in 200ms ease-in-out;
-
-  @keyframes fade-in {
-    from {
-      opacity: 0;
-      margin-top: 8px;
-    }
-    to {
-      opacity: 1;
-      margin-top: 0;
-    }
-  }
 
   & div {
     display: flex;
     padding: 8px 16px;
     cursor: pointer;
+
+    white-space: nowrap;
 
     &:hover {
       background: var(--muted-color);
