--- a/app/app.scss
+++ b/app/app.scss
@@ -3,6 +3,7 @@
   --foreground-color: #1b1b23;
   --border-color: #c7c5d0;
   --muted-color: #eeeeee;
+  --muted-foreground-color: #918F9A;
 
   --chart-1: #4142ef;
   --chart-2: #ff8346;
@@ -26,6 +27,8 @@ body {
   padding: 0;
   margin: 0;
   color: var(--foreground-color);
+  background-color: var(--background-color);
+  font-family: "Roboto", sans-serif;
 }
 
 .flex {
@@ -50,7 +53,7 @@ body {
 
 .conversions__options {
   display: flex;
-  margin-bottom: 16px;
+  margin-bottom: 40px;
 
   > * + * {
     margin-left: 8px;
