feat: theme switch, add icons

--- a/app/app.scss
+++ b/app/app.scss
@@ -14,7 +14,11 @@
   .dark {
     --background-color: #000027;
     --foreground-color: #ffffff;
-    --border-color: #c7c5d0;
+    --muted-color: #090935;
+    --muted-foreground-color: #d0cfd6;
+    --border-color: #30265f;
+
+    --chart-3: #d0d0d6;
   }
 }
 
