--- a/app/_mixins.scss
+++ b/app/_mixins.scss
@@ -4,21 +4,36 @@
   border-radius: var(--primary-radius);
   border: 1px solid var(--border-color);
   cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  gap: 4px;
+  color: var(--foreground-color);
+
+  & svg {
+    width: 16px;
+    height: 16px;
+
+    path {
+      fill: var(--muted-foreground-color);
+    }
+  }
 }
 
 @mixin popover {
   border-radius: var(--primary-radius);
   background: var(--background-color);
   border: 1px solid var(--border-color);
-  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.10);
+  box-shadow: 1px 2px 24px rgba(0, 0, 0, 0.08);
   position: absolute;
   z-index: 10;
+  min-width: 160px;
 
   & div {
     display: flex;
     padding: 8px 16px;
     cursor: pointer;
-
+    color: var(--foreground-color);
+    justify-content: space-between;
     white-space: nowrap;
 
     &:hover {
