feat: tooltips, disable zoom in/zoom out buttons

--- a/app/_mixins.scss
+++ b/app/_mixins.scss
@@ -9,6 +9,10 @@
   gap: 4px;
   color: var(--foreground-color);
 
+  &:disabled {
+    opacity: 0.4;
+  }
+
   & svg {
     width: 16px;
     height: 16px;
