--- a/app/app.scss
+++ b/app/app.scss
@@ -5,7 +5,7 @@
   --foreground-color: #1b1b23;
   --border-color: #c7c5d0;
   --muted-color: #eeeeee;
-  --muted-foreground-color: #918F9A;
+  --muted-foreground-color: #626264;
 
   --chart-1: #4142ef;
   --chart-2: #ff8346;
