--- a/app/app.scss
+++ b/app/app.scss
@@ -4,7 +4,7 @@
   --background-color: #ffffff;
   --foreground-color: #1b1b23;
   --border-color: #c7c5d0;
-  --muted-color: #eeeeee;
+  --muted-color: #d6d6d6;
   --muted-foreground-color: #626264;
 
   --chart-1: #4142ef;
